# controllers/UserStateController.go
@@ -13,6 +13,19 @@ type UserStateController struct {
 	service *services.UsersService
 }
 
+// @BasePath /UserState
+
+// Get User State Map in a session
+// @Summary Get User State Map for session Users
+// @Schemes
+// @Description api to get user state map for session users
+// @Tags UserState
+// @Accept json
+// @Produce json
+// @Param Transactionid header string true "Transactionid"
+// @Param sessionId path string true "Session Id"
+// @Success 200 {object} map[string]models.RedisUserEntry{}
+// @Router /api/v1/UserState/session/{sessionId} [get]
 func (u *UserStateController) getUserInSessionMapped(ctx *fiber.Ctx) error {
 	tid := ctx.GetReqHeaders()["Transactionid"]
 	if list, err := u.service.GetUsersInSessionMappedBstates(ctx.Params("session"), tid); err != nil {
@@ -26,6 +39,19 @@ func (u *UserStateController) getUserInSessionMapped(ctx *fiber.Ctx) error {
 	return nil
 }
 
+// @BasePath /UserState
+
+// Get User State Map in hearing(s)
+// @Summary Get User State Map for N hearings
+// @Schemes
+// @Description api to get user state map for n hearing Id
+// @Tags UserState
+// @Accept json
+// @Produce json
+// @Param Transactionid header string true "Transactionid"
+// @Param sessionId path string true "Session Id"
+// @Success 200 {object} map[string]map[string]models.RedisUserEntry{}
+// @Router /api/v1/UserState/hearing [get]
 func (u *UserStateController) getUsersInHearingMapped(ctx *fiber.Ctx) error {
 	tid := ctx.GetReqHeaders()["Transactionid"]
 	var arr []string
@@ -74,7 +100,7 @@ func (u *UserStateController) setUserState(ctx *fiber.Ctx) error {
 
 func (u *UserStateController) SetupRoutes(rg *fiber.Router) {
 	(*rg).Get("/session/:session", u.getUserInSessionMapped)
-	(*rg).Post("/hearing/", u.getUsersInHearingMapped)
+	(*rg).Post("/hearing", u.getUsersInHearingMapped)
 	(*rg).Post("", u.setUserState)
 
 }
